[package]
name = "records"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/fuwn/records"
repository = "https://github.com/fuwn/records"
license = "GPL-3.0-only"
keywords = ["rust", "records"]
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
# Web-Server
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-cors = "0.5.4"

# Environment
dotenv = "0.15.0"

# Logging
pretty_env_logger = "0.4.0"
log = "0.4.14"
